[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bluehood"
version = "0.2.0"
description = "Bluetooth neighborhood monitor - track devices in your area"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bleak>=0.21.0",
    "aiosqlite>=0.19.0",
    "aiohttp>=3.9.0",
    "mac-vendor-lookup>=0.1.12",
]

[project.scripts]
bluehood = "bluehood.daemon:main"

[tool.setuptools.packages.find]
where = ["."]
